added TOS and privacy policy statement.

--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@
       </div>
       <nav class="about-nav">
         <a class="link" href="index.html">Home</a>
-        <a class="link" href="#features">Features</a>
-        <a class="link" href="#credits">Credits</a>
+        <a class="link" href="tos.html">Terms of Service</a>
+        <a class="link" href="privacypolicy.html">Privacy Policy</a>
       </nav>
     </header>
 
@@ -118,7 +118,7 @@ Thanks for checking out PubRunna, and enjoy finding your next stop</p>
     </main>
 
     <footer class="about-footer">
-      <small class="muted">© Pub Runna </small>
+      <small class="muted">© Pub Runna • 2026 </small>
     </footer>
   </div>
 </body>
