--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="sectionTitle">Selected stops</div>
       <div id="selectedList" class="list"></div>
       <div id="rideonSummary">Total trips: 0 • Estimated travel time: 0 min</div>
-      <div class="footer">Designed and coded by Hunter Siviour <br> • Map data © OpenStreetMap contributors <br> <a class="link" href="about.html">About Pub Runna</a></div>
+      <div class="footer">Designed and coded by Hunter Siviour <br> • Map data © OpenStreetMap contributors <br> <a class="link" href="about.html">About Pub Runna</a> • <a class="link" href="privacypolicy.html">Privacy Policy</a> • <a class="link" href="tos.html">Terms of Service</a></div>
     </aside>
 
     <div id="map"></div>
