added web-specific email address

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@ Through building this app, I’ve been able to apply and expand my knowledge acr
 I’m always eager to learn more, take on new challenges, and refine my work. If you have any questions, feedback, or happen to spot a bug, feel free to reach out; I'm actively maintaining this project and happy to make improvements.
 
 Thanks for checking out PubRunna, and enjoy finding your next stop</p>
-            <p class="tiny muted">If you'd like to get in contact, feel free to reach out through my email at hunter.siviour6@gmail.com </p>
+            <p class="tiny muted">If you'd like to get in contact, feel free to reach out through my email at pubrunna.contact@gmail.com</p>
           </div>
         </div>
       </section>
