--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ride‑On: Pub Crawl Planner</title>
+  <title>Pub Runna: Pub Crawl Planner</title>
 
   <!-- Preconnect and external CSS -->
   <link rel="preconnect" href="https://unpkg.com" />
