--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   gtag('config', 'G-WQYNWC5262');
 </script>
+
+  <!-- Google Adsense verification -->
+   <meta name="google-adsense-account" content="ca-pub-5229714996890988">
+   
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pub Runna: Pub Crawl Planner</title>
