--- a/tos.html
+++ b/tos.html
@@ -7,6 +7,15 @@
   <link rel="preconnect" href="https://unpkg.com">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="tos.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WQYNWC5262"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WQYNWC5262');
+</script>
 </head>
 <body>
   <div id="aboutApp">
