overhaul of site naviagtion. Added homepage, menu and operations page.

--- a/about.html
+++ b/about.html
@@ -25,12 +25,19 @@
         <h1>Pub Runna</h1>
         <span class="badge">Leisure and Entertainment</span>
       </div>
-      <nav class="about-nav">
-        <a class="link" href="index.html">Home</a>
-        <a class="link" href="tos.html">Terms of Service</a>
-        <a class="link" href="privacypolicy.html">Privacy Policy</a>
-      </nav>
+
     </header>
+
+    <div id="menu-dropdown" class="menu-dropdown">
+      <button id="menu-btn" class="menu-btn">☰</button>
+      <div id="menu-content" class="menu-content">
+        <a href="index.html">Home</a>
+        <a href="map.html">Pub Finder</a>
+        <a href="operations.html">How Pub Runna Operates</a>
+        <a href="tos.html">Terms of Service</a>
+        <a href="privacypolicy.html">Privacy Policy</a>
+      </div>
+    </div>
 
     <main class="about-main">
       <section class="hero">
@@ -121,5 +128,7 @@ Thanks for checking out PubRunna, and enjoy finding your next stop</p>
       <small class="muted">© Pub Runna • 2026 </small>
     </footer>
   </div>
+
+  <script src="about.js"></script>
 </body>
 </html>
