--- a/tos.html
+++ b/tos.html
@@ -25,12 +25,19 @@
         <h1>Pub Runna</h1>
         <span class="badge">Legal</span>
       </div>
-      <nav class="about-nav">
-        <a class="link" href="index.html">Home</a>
-        <a class="link" href="about.html">About</a>
-        <a class="link" href="privacypolicy.html">Privacy</a>
-      </nav>
+
     </header>
+
+    <div id="menu-dropdown" class="menu-dropdown">
+      <button id="menu-btn" class="menu-btn">☰</button>
+      <div id="menu-content" class="menu-content">
+        <a href="index.html">Home</a>
+        <a href="map.html">Pub Finder</a>
+        <a href="operations.html">How Pub Runna Operates</a>
+        <a href="privacypolicy.html">Privacy Policy</a>
+        <a href="about.html">About</a>
+      </div>
+    </div>
 
     <main class="about-main">
       <section class="hero">
@@ -89,5 +96,7 @@
       <small class="muted">© Pub Runna • 2026</small>
     </footer>
   </div>
+
+  <script src="tos.js"></script>
 </body>
 </html>
