--- a/index.html
+++ b/index.html
@@ -18,153 +18,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pub Runna: Pub Crawl Planner</title>
 
-  <!-- Preconnect and external CSS -->
-  <link rel="preconnect" href="https://unpkg.com" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-
   <!-- Project stylesheet -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="map.css" />
 </head>
 <body>
-  <div id="app">
-    <aside id="sidebar">
-      <header>
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M7 10h10M7 14h10" stroke="#6ee7b7" stroke-width="2" stroke-linecap="round"/><path d="M6 19.5c1.5-1.5 3-2.25 6-2.25s4.5.75 6 2.25" stroke="#60a5fa" stroke-width="2" stroke-linecap="round"/></svg>
-        <h1> Pub Runna </h1>
-        <span class="badge">Leisure and Entertainment</span>
-      </header>
-
-      <div class="controls">
-        <div class="group">
-          <div class="label">Your location</div>
-          <div class="row">
-            <button id="locateBtn">📍 Locate me</button>
-            <button id="clearPubsBtn" class="secondary">Clear pubs</button>
-          </div>
-          <div class="row">
-            <input id="manualAddressInput" type="text" placeholder="Type address or street…" />
-            <button id="manualAddressBtn" class="ghost">Set location</button>
-          </div>
-          <div class="row">
-            <input id="searchBox" type="text" placeholder="Search a pub…" />
-            <button id="searchBtn" class="ghost">Search</button>
-          </div>
-        </div>
-
-        <div class="group">
-          <div class="label">Radius (km) & Dead-zone (km)</div>
-          <div class="row">
-            <input id="radiusInput" type="number" min="0.2" step="0.2" value="1" />
-            <input id="deadzoneInput" type="number" min="0" step="0.2" value="0" style="width:90px" />
-            <select id="amenitySelect">
-              <option value="pub">Pubs</option>
-              <option value="bar">Bars</option>
-            </select>
-            <button id="findBtn" class="ghost">Find</button>
-          </div>
-          <div class="row">
-            <button id="randomRouteBtn" class="ghost" style="width:100%">Generate random route</button>
-          </div>
-          <div class="tiny muted">
-            Data via OpenStreetMap/Overpass • Routing via OSRM demo<br>
-            <span style="color:#60a5fa">Blue = max distance</span>,
-            <span style="color:#ef4444">Red = min distance (dead-zone)</span>
-          </div>
-        </div>
-
-        <div class="group">
-          <div class="label ghost" style="cursor:pointer;display:flex;align-items:center;gap:6px;justify-content:flex-start;" id="rideonDropdownToggle">
-            <span id="rideonDropdownArrow" style="transition:transform 0.2s;">▼</span>
-            Ride‑On (your crawl)
-          </div>
-          <div id="rideonDropdownContent" style="display:none;">
-            <div class="row">
-              <button id="routeBtn">Route selected</button>
-              <button id="resetRouteBtn" class="secondary">Reset route</button>
-            </div>
-            <div class="row">
-              <input id="planName" type="text" placeholder="Plan name (e.g. West End Crawl)" />
-              <button id="savePlanBtn" class="ghost">Save</button>
-              <button id="sharePlanBtn" class="ghost">Share</button>
-            </div>
-            <div class="row">
-              <select id="savedPlansSelect"></select>
-              <button id="loadPlanBtn" class="ghost">Load</button>
-              <button id="deletePlanBtn" class="danger">Delete</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="sectionTitle">Selected stops</div>
-      <div id="selectedList" class="list"></div>
-      <div id="rideonSummary">Total trips: 0 • Estimated travel time: 0 min</div>
-      <div class="footer">Designed and coded by Hunter Siviour <br> • Map data © OpenStreetMap contributors <br> <a class="link" href="about.html">About Pub Runna</a> • <a class="link" href="privacypolicy.html">Privacy Policy</a> • <a class="link" href="tos.html">Terms of Service</a></div>
-    </aside>
-
-    <div id="map"></div>
-
-    <!-- Mobile toolbar (visible on small screens) -->
-    <div id="mobileToolbar" class="mobile-toolbar" aria-hidden="true">
-      <div class="mobile-toolbar-inner"></div>
+  <div id="menu-dropdown" class="menu-dropdown">
+    <button id="menu-btn" class="menu-btn">☰</button>
+    <div id="menu-content" class="menu-content">
+      <a href="map.html">Pub Finder</a>
+      <a href="operations.html">How Pub Runna Operates</a>
+      <a href="tos.html">Terms of Service</a>
+      <a href="privacypolicy.html">Privacy Policy</a>
+      <a href="about.html">About</a>
     </div>
-
   </div>
-
-  <div class="toast" id="toast"></div>
-
-  <!-- Welcome Overlay -->
-  <div id="welcomeOverlay">
-    <div class="welcome-content">
-      <div class="mobile-scroll" aria-hidden="false">
-        <h4 class="scroll-title">How to plan a pub route</h4>
-        <div class="scroll-steps">
-          <div class="scroll-step">
-            <div class="step-num">1</div>
-            <div class="step-text"><strong>Locate</strong><div class="tiny">Tap <b>Locate</b> or search an address to set your start point.</div></div>
-          </div>
-          <div class="scroll-step">
-            <div class="step-num">2</div>
-            <div class="step-text"><strong>Find pubs</strong><div class="tiny">Choose a radius & dead-zone, then search for pubs and bars nearby.</div></div>
-          </div>
-          <div class="scroll-step">
-            <div class="step-num">3</div>
-            <div class="step-text"><strong>Route & share</strong><div class="tiny">Generate a route, save plans locally, or copy a shareable link.</div></div>
-          </div>
-        </div>
+  <div id="instructions">
+    <h1>Welcome to Pub Runna</h1>
+    <p class="subtitle">Here's how to start</p>
+    <div class="steps-container">
+      <div class="step-box">
+        <div class="step-num">1</div>
+        <div class="step-title">Set Your Location</div>
+        <div class="step-desc">Click the "📍 Locate me" button to automatically find your current position using GPS. Alternatively, type an address or street name in the manual address field and click "Set location" to position the map there. You can also drag the blue marker on the map to adjust your starting point precisely.</div>
       </div>
-      <h1 class="welcome-title">Pub Runna</h1>
-      <div class="welcome-sub">Your favourite pub and bar finder</div>
-      <div class="welcome-steps">
-        <div class="welcome-step">
-          <div class="step-num">1</div>
-          <div class="step-title">Locate Yourself</div>
-          <div class="step-desc">Click <b>Locate</b> or search a custom address to find your area.</div>
-        </div>
-        <div class="welcome-step">
-          <div class="step-num">2</div>
-          <div class="step-title">Find Pubs & Plan</div>
-          <div class="step-desc">Search for pubs with a custom radius or generate a random route!</div>
-        </div>
-        <div class="welcome-step">
-          <div class="step-num">3</div>
-          <div class="step-title">Save & Revisit</div>
-          <div class="step-desc">Save your route to access, edit and execute later!</div>
-        </div>
+      <div class="step-box">
+        <div class="step-num">2</div>
+        <div class="step-title">Find Nearby Pubs</div>
+        <div class="step-desc">Set your search radius (in km) and dead-zone (minimum distance from your location). Choose between pubs or bars. Click "Find" to search for venues within your radius. The blue circle shows your max distance, red circles indicate dead-zones around selected pubs. Use "Search a pub" to find specific venues by name.</div>
       </div>
-      <button id="welcomeContinueBtn">Get Started ↓</button>
+      <div class="step-box">
+        <div class="step-num">3</div>
+        <div class="step-title">Generate Random Routes</div>
+        <div class="step-desc">For spontaneous adventures, click "Generate random route" after setting your radius and dead-zone. This creates a randomized pub crawl path, selecting pubs that meet your criteria while respecting distance constraints. Perfect for discovering new places!</div>
+      </div>
+      <div class="step-box">
+        <div class="step-num">4</div>
+        <div class="step-title">Plan Your Crawl</div>
+        <div class="step-desc">Click on pub markers to add them to your "Ride-On" list. Reorder stops by using the up/down arrows, or set individual dead-zones per pub. The summary shows total trips and estimated travel time. Use "Route selected" to see the path on the map, or "Reset route" to clear it.</div>
+      </div>
+      <div class="step-box">
+        <div class="step-num">5</div>
+        <div class="step-title">Save & Share Plans</div>
+        <div class="step-desc">Name your plan and click "Save" to store it locally in your browser. Load previous plans from the dropdown. Click "Share" to copy a link that others can use to view your exact route. Plans persist between sessions.</div>
+      </div>
+      <div class="step-box transition-box">
+        <div class="step-title">Are you ready to jump in?</div>
+        <div class="step-desc">Start planning your perfect pub crawl with our interactive map tools!</div>
+        <button id="startBtn" class="start-button">Let's Get Started! →</button>
+      </div>
     </div>
   </div>
 
-  <!-- External JS libraries (order matters) -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-  <script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.min.js"></script>
-  <script src="https://unpkg.com/@turf/turf@6.5.0/turf.min.js"></script>
-  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+<script src="index.js"></script>
 
-  <!-- Project script -->
-  <script src="script.js"></script>
 </body>
-</html>
+</html></content>
+
