--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -26,12 +26,19 @@
         <h1>Pub Runna</h1>
         <span class="badge">Privacy</span>
       </div>
-      <nav class="about-nav">
-        <a class="link" href="index.html">Home</a>
-        <a class="link" href="tos.html">Terms of Service</a>
-        <a class="link" href="about.html">About</a>
-      </nav>
+
     </header>
+
+    <div id="menu-dropdown" class="menu-dropdown">
+      <button id="menu-btn" class="menu-btn">☰</button>
+      <div id="menu-content" class="menu-content">
+        <a href="index.html">Home</a>
+        <a href="map.html">Pub Finder</a>
+        <a href="operations.html">How Pub Runna Operates</a>
+        <a href="tos.html">Terms of Service</a>
+        <a href="about.html">About</a>
+      </div>
+    </div>
 
     <main class="about-main">
       <section class="hero">
@@ -78,5 +85,7 @@
       <small class="muted">© Pub Runna • 2026</small>
     </footer>
   </div>
+
+  <script src="privacypolicy.js"></script>
 </body>
 </html>
