--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pub Runna: Pub Crawl Planner</title>
+  <title>Pub Runna: home </title>
 
   <!-- Project stylesheet -->
   <link rel="stylesheet" href="map.css" />
